# clcache

./: .gitignore  .sourcery.yaml  LICENSE  clcache-dev.code-workspace  compile_nuitka.bat  compile_nuitka.ps1  requirement.txt
.github/workflows/: release.yml
clcache/: Pipfile  __main__.py  args.py
clcache/clcache_lib/: LICENSE.txt  setup.py
clcache/clcache_lib/clcache_lib/: clcache.py
clcache/clcache_lib/clcache_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clcache/clcache_lib/clcache_lib/cache/: __init__.py  cache.py  cache_lock.py  config.py  couchbase_ex.py  ex.py  file_cache.py  hash.py  logger.py  manifest_entry.py  persistent_json_dict.py  remote_cache.py  server.py  stats.py  util.py  virt.py
clcache/clcache_lib/clcache_lib/cl/: clcache.py  compiler.py
clcache/clcache_lib/clcache_lib/config/: config.py
clcache/clcache_lib/clcache_lib/moc/: compiler.py
clcache/clcache_lib/clcache_lib/utils/: app_singleton.py  args.py  errors.py  file_lock.py  logging.py  named_mutex.py  process.py  util.py  win_evt_log.py
clcache/clcachelib/: README.md  setup.py
clcache/clcachelib/clcachelib/actions/: actions.py
clcache/clcachelib/clcachelib/cache/: __init__.py  file_cache.py  hash.py  remote_cache.py  virt.py
clcache/clcachelib/clcachelib/cl/: compiler.py
clcache/clcachelib/clcachelib/config/: config.py
clcache/clcachelib/clcachelib/utils/: app_singleton.py  logging.py  ready_event.py  safe_exec.py
clcache/server/: __main__.py
clcache/src/cache/: cache.py  ex.py  file_cache.py  hash.py  remote_cache.py  stats.py
clcache/src/config/: config.py
clcache_launcher/: Cargo.toml
clcache_launcher/src/: main.rs
clcache_server/: .gitignore  Cargo.toml
clcache_server/src/: event.rs  hash_cache.rs  main.rs  util.rs
clcache_server/tests/: integration_test.rs
conan/: conanfile.py
couchbase_sync/: Dockerfile  Pipfile  README.md  __main__.py  cache.py  clcache_sync.Dockerfile  docker-compose.yml  main.py  server.py
couchbase_sync/couchbase/: Dockerfile  configure-couchbase.sh  docker-compose.yml
docker/: DependsExe.patch  Dockerfile  README.md  entrypoint.sh
docker.win/: Dockerfile  entrypoint.ps1  requirements.txt
moccache/: __main__.py
pyinstaller/: clcache_main.py
tools/: parse_clcache_log.py
