[package]
name = "clcache_server"
version = "4.4.15"
edition = "2021"
authors = ["Daniel Gehriger <dgehriger@globusmedical.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4" # Concurrent hashmap
anyhow = "1.0" # Error handling
tokio = { version = "1.0", features = ["full"] } # Asynchronous runtime
tokio-stream = { version = "0.1", features = ["full"] } # Asynchronous streams
futures = "0.3" # Asynchronous futures
winapi = "0.3" # Windows API bindings
once_cell = "1.8.0" # Thread-safe lazy initialization
single-instance = "0.3"
clap = { version = "4.2", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
md5 = "0.7"
log = "0.4"
env_logger = "0.10.0"
tempfile = "3.5.0"
rand = "0.8"
chrono = "0.4"
widestring = "1.0.2"
tokio-util = { version = "0.7.8", features = ["codec"] }
